Cleaned up duplicate code

--- a/editors_choice.css
+++ b/editors_choice.css
@@ -12,22 +12,16 @@
 }
 
 /* Move the buttons and text in more so that they can be lined up with the items below */
-.editorsChoiceScrollButtonsContainer {
-    right: 50px;
-}
-
+.editorsChoiceScrollButtonsContainer,
 .editorsChoicePlayPauseContainer {
     right: 50px;
 }
 
-.editorsChoiceItemLogo {
+.editorsChoiceItemLogo,
+.editorsChoiceItemOverview{
     margin-left: 20px !important;
     margin-right: auto !important;
     align-self: flex-start;
-}
-
-.editorsChoiceItemOverview {
-    margin-left: 20px !important;
 }
 
 .editorsChoiceItemButton {
